--- a/views/mixins/articleForm.pug
+++ b/views/mixins/articleForm.pug
@@ -13,6 +13,6 @@ mixin articleForm(article, buttonText, saveUrl, cancelUrl, deleteUrl)
             label(for="body").form_label
             textarea(name="body" id="body" rows=20 cols=100 placeholder="Once upon a time in a land far far away...") #{article.body}
         a.button(href=cancelUrl) Cancel
-        if(deleteUrl)
+        if(deleteUrl && user && article.isOwnedBy(user))
             a.button(href=deleteUrl) Delete
         button.button.primary(type="submit") #{buttonText}
